fix(tours): добавляет z-index  фоновому облаку

--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -238,4 +238,5 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: -10;
 }
